Fix bug #48284 - adler32 is in the wrong order. Changed to match what zlib produces.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@283135 c90b9560-bf6c-de11-be94-00142212c4b1